--- a/Links.html
+++ b/Links.html
@@ -17,7 +17,7 @@
         <h1>Schaderegelingsburo <br> R.P. van Dijk</h1>
         <!--Samenstellen van de navigatie balk -->
         <nav class="topnav" id="myTopnav">
-            <a class="kopje" href="Index.html" id="active">Home</a>
+            <a class="kopje" href="Index.html">Home</a>
             <a class="kopje" href="Diensten.html">Diensten</a>
             <a class="kopje" href="Klachtenregeling.html">Klachtenregeling</a>
             <a class="kopje" href="Bezoek.html">Bezoek</a>
@@ -41,7 +41,7 @@
                 <a href="www.genas.nl">www.genas.nl</a><br>
                 Medisch adviseurs<br><br>
                 <a href="www.stichtingpiv.nl">www.stichtingpiv.nl</a><br>
-                Personenschade Instituut van Verzekeraars<br>
+                Personenschade Instituut van Verzekeraars<br><br>
                 <a href="www.deletselschaderaad.nl">www.deletselschaderaad.nl</a><br>
                 De Letselschade Raad
             </p>
