--- a/Privacy.html
+++ b/Privacy.html
@@ -17,7 +17,7 @@
         <h1>Schaderegelingsburo <br> R.P. van Dijk</h1>
         <!--Samenstellen van de navigatie balk -->
         <nav class="topnav" id="myTopnav">
-            <a class="kopje" href="Index.html" id="active">Home</a>
+            <a class="kopje" href="Index.html">Home</a>
             <a class="kopje" href="Diensten.html">Diensten</a>
             <a class="kopje" href="Klachtenregeling.html">Klachtenregeling</a>
             <a class="kopje" href="Bezoek.html">Bezoek</a>
